Added djoser, auth by jwt for api calls, trottling for rest, endpoints for all crud operations on menu and reservations.

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ media
 *.pyc
 __pycache__/
 
-.migrations
+**/migrations/
 # If you are using PyCharm # 
 # User-specific stuff
 .idea/**/workspace.xml
