--- a/nginx.conf
+++ b/nginx.conf
@@ -13,8 +13,8 @@ http {
 
        # Requests to /static/ are served directly from the /static/ directory
        location /static/ {
-           alias /static/;
-           expires 7d;
+           alias /staticfiles/;
+           expires 30d;
        }
 
        # Configuration for serving media files
