--- a/compose.yaml
+++ b/compose.yaml
@@ -22,7 +22,7 @@ services:
         condition: service_healthy
         restart: true
     volumes:
-      - ./static:/app/staticfiles
+      - static_data:/app/staticfiles   # use named volume instead of ./static
     env_file:
       - .env.prod
 
@@ -32,9 +32,10 @@ services:
       - "8001:80"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./static:/static:ro
+      - static_data:/staticfiles:ro         # serve collected static files from volume
     depends_on:
       - django-web
 
 volumes:
   db_data:
+  static_data:
